<resources>
    <string name="app_name">Caculator</string>
    <string name="text_div">/</string>
    <string name="text_plus">+</string>
    <string name="text_back">RE</string>
    <string name="text_dot">.</string>
    <string name="text_equal">=</string>
    <string name="text_sub">-</string>
    <string name="text_mul">*</string>
    <string name="text_ce">CE</string>
    <string name="text_emp" />
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
</resources>